; ModuleID = '/home/carl/AnghaBench/freebsd/sys/sparc64/sbus/extr_dma_sbus.c_dma_probe_nomatch.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/sparc64/sbus/extr_dma_sbus.c_dma_probe_nomatch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"<%s>\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c" type %s (no driver attached)\0A\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"unknown\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @dma_probe_nomatch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dma_probe_nomatch(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @ofw_bus_get_name(i32 %7)
  %9 = call i32 @device_printf(i32 %6, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @device_get_ivars(i32 %10)
  %12 = call i32 @dma_print_res(i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = call i8* @ofw_bus_get_type(i32 %13)
  store i8* %14, i8** %5, align 8
  %15 = load i8*, i8** %5, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i8*, i8** %5, align 8
  br label %20

19:                                               ; preds = %2
  br label %20

20:                                               ; preds = %19, %17
  %21 = phi i8* [ %18, %17 ], [ getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), %19 ]
  %22 = call i32 @printf(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i8* %21)
  ret void
}

declare dso_local i32 @device_printf(i32, i8*, i32) #1

declare dso_local i32 @ofw_bus_get_name(i32) #1

declare dso_local i32 @dma_print_res(i32) #1

declare dso_local i32 @device_get_ivars(i32) #1

declare dso_local i8* @ofw_bus_get_type(i32) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
